# file-manager

./: Cargo.toml  README.md
.github/workflows/: test.yml
dir-iter/: Cargo.toml
dir-iter/src/: dir_opts.rs  lib.rs
dir-iter/src/tests/: recursive.rs
dir-lister/: Cargo.toml
dir-lister/src/: dir_entry.rs  dir_iter.rs  dir_lister.rs  lib.rs  readme.md
dir-lister/src/tests/: recursive.rs  util.rs
file-manager/: Cargo.toml
file-manager/src/: lib.rs
file-manager/src/actions/: delete.rs  list.rs  mod.rs  read.rs
file-manager/src/dir/: copy.rs  list.rs
file-manager/src/helpers/: dest_file.rs  dir_iter.rs  file.rs  mod.rs  path.rs
file-manager/src/iters/dir/: dir_entry.rs
file-manager/src/iters/dir/tests/: recursive.rs  util.rs
src/: error.rs  lib.rs
src/actions/: copy.rs  list.rs  mod.rs  resolve.rs  write.rs
src/dir/: list.rs  mod.rs
src/helpers/: ascii_tree.rs  dest_dir.rs  dir_iter.rs  env.rs  file.rs  glob_filter.rs  glob_set.rs  mod.rs  path.rs  tempdir.rs
src/iters/: mod.rs
src/iters/dir/: dir_entry.rs  dir_iter.rs  dir_opts.rs  error.rs  mod.rs
src/iters/dir/tests/: recursive.rs  util.rs
src/lister/: dir_iter.rs  glob_filter.rs  inner.rs  mod.rs
src/proto/: builder.rs  mod.rs  test.rs
tests/: copy_tests.rs  list_tests.rs  write_tests.rs
