[package]
name = "dir-lister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = { workspace = true }
anyhow = { workspace = true }
same-file = "1.0.1"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["std", "winnt"]

[target.'cfg(windows)'.dependencies.winapi-util]
version = "0.1.1"
